--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <!-- MENU FOOTER -->
             <nav class="menu_footer">
                 <ul>
-                    <li>
+                    <li class="menu_footer-item_parent">
                         <a href="#">Item 1</a>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 1.1</a></li>
@@ -145,7 +145,7 @@
                             <li><a href="#">Sous-Item 1.4</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="menu_footer-item_parent">
                         <a href="#">Item 2</a>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 2.1</a></li>
@@ -154,7 +154,7 @@
                             <li><a href="#">Sous-Item 2.4</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="menu_footer-item_parent">
                         <a href="#">Item 3</a>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 3.1</a></li>
@@ -163,7 +163,7 @@
                             <li><a href="#">Sous-Item 3.4</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="menu_footer-item_parent">
                         <a href="#">Item 4</a>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 4.1</a></li>
@@ -172,7 +172,7 @@
                             <li><a href="#">Sous-Item 4.4</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="menu_footer-item_parent">
                         <a href="#">Item 5</a>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 5.1</a></li>
