--- a/index.html
+++ b/index.html
@@ -12,36 +12,36 @@
     <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 
-<body x-data="{ openMenuMobile: false }" x-bind:class="{ 'header_mobile_open': openMenuMobile }">
+<body x-data="{ openMenuHeaderMobile: false }" x-bind:class="{ 'header_mobile_open': openMenuHeaderMobile }">
     <!-- HEADER -->
     <header>
         <div class="logo_nav">
             <img class="logo" src="./images/logo.png" alt="logo site" />
             <!-- MENU HEADER-->
             <nav class="menu_header">
-                <ul x-data="{ openSousMenuItem2: false, openSousMenuItem3: false, openSousMenuItem4: false }">
+                <ul x-data="{ openHeaderSousMenuItem2: false, openHeaderSousMenuItem3: false, openHeaderSousMenuItem4: false }">
                     <li class="menu_header-item_parent"><a href="#">Accueil</a></li>
-                    <li class="menu_header-item_parent" x-on:click="openSousMenuItem2 = ! openSousMenuItem2">
+                    <li class="menu_header-item_parent" x-on:click="openHeaderSousMenuItem2 = ! openHeaderSousMenuItem2">
                         <a href="#">Item 2</a>
-                        <ul class="menu_header-sous_menu" x-show="openSousMenuItem2" x-transition.duration.300ms>
+                        <ul class="menu_header-sous_menu" x-show="openHeaderSousMenuItem2" x-transition.duration.300ms>
                             <li><a href="#">Sous-Item 2.1</a></li>
                             <li><a href="#">Sous-Item 2.2</a></li>
                             <li><a href="#">Sous-Item 2.3</a></li>
                             <li><a href="#">Sous-Item 2.4</a></li>
                         </ul>
                     </li>
-                    <li class="menu_header-item_parent" x-on:click="openSousMenuItem3 = ! openSousMenuItem3">
+                    <li class="menu_header-item_parent" x-on:click="openHeaderSousMenuItem3 = ! openHeaderSousMenuItem3">
                         <a href="#">Item 3</a>
-                        <ul class="menu_header-sous_menu" x-show="openSousMenuItem3" x-transition.duration.300ms>
+                        <ul class="menu_header-sous_menu" x-show="openHeaderSousMenuItem3" x-transition.duration.300ms>
                             <li><a href="#">Sous-Item 3.1</a></li>
                             <li><a href="#">Sous-Item 3.2</a></li>
                             <li><a href="#">Sous-Item 3.3</a></li>
                             <li><a href="#">Sous-Item 3.4</a></li>
                         </ul>
                     </li>
-                    <li class="menu_header-item_parent" x-on:click="openSousMenuItem4 = ! openSousMenuItem4">
+                    <li class="menu_header-item_parent" x-on:click="openHeaderSousMenuItem4 = ! openHeaderSousMenuItem4">
                         <a href="#">Item 4</a>
-                        <ul class="menu_header-sous_menu" x-show="openSousMenuItem4" x-transition.duration.300ms>
+                        <ul class="menu_header-sous_menu" x-show="openHeaderSousMenuItem4" x-transition.duration.300ms>
                             <li><a href="#">Sous-Item 4.1</a></li>
                             <li><a href="#">Sous-Item 4.2</a></li>
                             <li><a href="#">Sous-Item 4.3</a></li>
@@ -52,9 +52,9 @@
                 </ul>
             </nav>
             <!-- MENU BURGER -->
-            <div x-on:click="openMenuMobile = ! openMenuMobile" class="menu_burger_icon">
-                <svg x-show="!openMenuMobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
-                <svg x-show="openMenuMobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+            <div x-on:click="openMenuHeaderMobile = ! openMenuHeaderMobile" class="menu_burger_icon">
+                <svg x-show="!openMenuHeaderMobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
+                <svg x-show="openMenuHeaderMobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
             </div>
         </div>
         <!-- BANNIERE -->
