--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
                 <p>Adresse</p>
             </div>
             <!-- MENU FOOTER -->
-            <nav class="menu_footer">
+            <nav class="menu_footer"> <!--s'inspirer du site d'indépendance royale-->
                 <ul>
                     <li class="menu_footer-item_parent">
-                        <a href="#">Item 1</a>
+                        <p>Item 1</p>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 1.1</a></li>
                             <li><a href="#">Sous-Item 1.2</a></li>
@@ -146,7 +146,7 @@
                         </ul>
                     </li>
                     <li class="menu_footer-item_parent">
-                        <a href="#">Item 2</a>
+                        <p>Item 2</p>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 2.1</a></li>
                             <li><a href="#">Sous-Item 2.2</a></li>
@@ -155,7 +155,7 @@
                         </ul>
                     </li>
                     <li class="menu_footer-item_parent">
-                        <a href="#">Item 3</a>
+                        <p>Item 3</p>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 3.1</a></li>
                             <li><a href="#">Sous-Item 3.2</a></li>
@@ -164,7 +164,7 @@
                         </ul>
                     </li>
                     <li class="menu_footer-item_parent">
-                        <a href="#">Item 4</a>
+                        <p>Item 4</p>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 4.1</a></li>
                             <li><a href="#">Sous-Item 4.2</a></li>
@@ -173,7 +173,7 @@
                         </ul>
                     </li>
                     <li class="menu_footer-item_parent">
-                        <a href="#">Item 5</a>
+                        <p>Item 5</p>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 5.1</a></li>
                             <li><a href="#">Sous-Item 5.2</a></li>
