add chevron to item parent with sous-menu (header & footer)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
                 <ul x-data="{ openHeaderSousMenuItem2: false, openHeaderSousMenuItem3: false, openHeaderSousMenuItem4: false }">
                     <li class="menu_header-item_parent"><a href="#">Accueil</a></li>
                     <li class="menu_header-item_parent" x-on:click="openHeaderSousMenuItem2 = ! openHeaderSousMenuItem2">
-                        <a href="#">Item 2</a>
+                        <a href="#">
+                            <p>Item 2</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path> </svg>
+                        </a>
                         <ul class="menu_header-sous_menu" x-show="openHeaderSousMenuItem2" x-transition.duration.300ms>
                             <li><a href="#">Sous-Item 2.1</a></li>
                             <li><a href="#">Sous-Item 2.2</a></li>
@@ -31,7 +34,10 @@
                         </ul>
                     </li>
                     <li class="menu_header-item_parent" x-on:click="openHeaderSousMenuItem3 = ! openHeaderSousMenuItem3">
-                        <a href="#">Item 3</a>
+                        <a href="#">
+                            <p>Item 3</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path> </svg>
+                        </a>
                         <ul class="menu_header-sous_menu" x-show="openHeaderSousMenuItem3" x-transition.duration.300ms>
                             <li><a href="#">Sous-Item 3.1</a></li>
                             <li><a href="#">Sous-Item 3.2</a></li>
@@ -40,7 +46,10 @@
                         </ul>
                     </li>
                     <li class="menu_header-item_parent" x-on:click="openHeaderSousMenuItem4 = ! openHeaderSousMenuItem4">
-                        <a href="#">Item 4</a>
+                        <a href="#">
+                            <p>Item 4</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path> </svg>
+                        </a>
                         <ul class="menu_header-sous_menu" x-show="openHeaderSousMenuItem4" x-transition.duration.300ms>
                             <li><a href="#">Sous-Item 4.1</a></li>
                             <li><a href="#">Sous-Item 4.2</a></li>
@@ -137,7 +146,10 @@
             <nav class="menu_footer"> <!--s'inspirer du site d'indépendance royale-->
                 <ul>
                     <li class="menu_footer-item_parent">
-                        <p>Item 1</p>
+                        <div>
+                            <p>Item 1</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path> </svg>
+                        </div>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 1.1</a></li>
                             <li><a href="#">Sous-Item 1.2</a></li>
@@ -146,7 +158,10 @@
                         </ul>
                     </li>
                     <li class="menu_footer-item_parent">
-                        <p>Item 2</p>
+                        <div>
+                            <p>Item 2</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path> </svg>
+                        </div>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 2.1</a></li>
                             <li><a href="#">Sous-Item 2.2</a></li>
@@ -155,7 +170,10 @@
                         </ul>
                     </li>
                     <li class="menu_footer-item_parent">
-                        <p>Item 3</p>
+                        <div>
+                            <p>Item 3</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path> </svg>
+                        </div>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 3.1</a></li>
                             <li><a href="#">Sous-Item 3.2</a></li>
@@ -164,7 +182,10 @@
                         </ul>
                     </li>
                     <li class="menu_footer-item_parent">
-                        <p>Item 4</p>
+                        <div>
+                            <p>Item 4</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path> </svg>
+                        </div>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 4.1</a></li>
                             <li><a href="#">Sous-Item 4.2</a></li>
@@ -173,7 +194,10 @@
                         </ul>
                     </li>
                     <li class="menu_footer-item_parent">
-                        <p>Item 5</p>
+                        <div>
+                            <p>Item 5</p>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path> </svg>
+                        </div>
                         <ul class="menu_footer-sous_menu">
                             <li><a href="#">Sous-Item 5.1</a></li>
                             <li><a href="#">Sous-Item 5.2</a></li>
