--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <!-- BANNIERE -->
         <div class="banner">
-            <h1>Bannière</h1>
+            <h1>Pour montrer le menu responsive avec Alpine JS</h1>
         </div>
     </header>
 
